--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,23 @@ main {
 #current-weather {
     background-color: bisque;
     flex-grow: 1;
-    border: 2px solid red;
 }
 
 #forecast {
     background-color: darkgray;
     flex-grow:1;
+}
+#forecast-cards{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: darkgray;
+    border: 2px solid rgba(0,0,0,0.5);
+    border-radius: 8px;
+
+    margin: 5px;
+    padding: 5px;
+    height: min-content;
 }
