finished styling for the night

--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,14 @@ main {
   color: cornsilk;
   background-image: url(/images/weather-header.png);
   background-position: end;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 h1 {
-  font-size: xx-large;
+  font-size: 50px;
+  padding-left: 250px;
 }
 
 .left-column {
@@ -73,12 +74,22 @@ h1 {
   padding-left: 20px;
 }
 
+#weather-data {
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    margin: 5px;
+    padding: 5px;
+    height: min-content;
+    width: fit-content;
+}
+
 #forecast {
   background-color: darkgray;
   flex-grow: 1;
   padding-top: 20px;
   padding-left: 20px;
 }
+
 #forecast-cards {
   display: flex;
   flex-wrap: wrap;
@@ -95,15 +106,15 @@ h1 {
 
 .card:hover {
   box-shadow: 0px 0px 100px 0px rgb(228, 255, 105);
-  transition: color 0.7s ease-in-out;
-  box-shadow: 0.7s ease-in-out;
+  transition: color 2s;
+  box-shadow: 2s;
   cursor: crosshair;
 }
 
 footer {
   display: flex;
   justify-content: center;
-  background: transparent;
+  /* background: linear-gradient(linear-gradient(50deg, rgb(103, 148, 247) 50%, rgb(242, 252, 105) 90%)); */
   padding: 8px;
 }
 
